src/ludivine/assets/client.css
/* ... */
.circle {
    --fill: #383838;
    --empty: color-mix(in srgb, var(--fill), white 80%);

    & circle:nth-child(1) { stroke: var(--empty); }
    & circle:nth-child(2) { stroke: var(--fill); }
}

.row {
    display: flex;
    gap: 1em;
    align-items: start;
}
.column {
    display: flex;
    flex-direction: column;
    gap: 1em;
}
.box {
    display: flex;
    flex-direction: column;
    padding: 1em;
    gap: 1em;
    background: var(--box_color);
    border-radius: 8px;
}
.box > .help { margin: 1em auto; }

.help {
    display: flex;
    width: 80%;
    max-width: 600px;
    gap: 1em;
    align-items: start;
    align-self: center;

    & > img {
        width: 200px;
        aspect-ratio: auto;
        z-index: 1;
        transform: translateX(-100px);
    }
    & > div {
        min-height: 100px;
        margin: 75px 0 0 -250px;
        padding: 1em 1em 1em 150px;
        background: white;
        border-radius: 8px;
    }

    &.right > div {
        margin: 75px -250px 0 0;
        padding: 1em 150px 1em 1em;
    }
    &.right > img { transform: translateX(100px); }
}

@media screen and (max-width: 960px) {
    .row {
        flex-direction: column;
        align-items: stretch;
    }

    .help {
        & > img { width: 100px; }
        & > div {
            min-height: 60px;
            margin-top: 20px;
        }
    }
    .help:not(.right) {
        margin-right: 0;

        & > div {
            margin-left: calc(-150px - 2em);
            padding-left: 75px;
        }
    }
    .help.right {
        margin-left: 0;

        & > div {
            margin-right: calc(-150px - 2em);
            padding-right: 75px;
        }
    }
}

.header {
    font-size: 1.2em;
    font-weight: bold;
    text-transform: uppercase;
    text-align: center;
    color: var(--top_color);
}
.safe {
    display: inline-block;
    vertical-align: middle;
    width: 24px;
    height: 24px;
    margin: 0 0.5em;
    background-color: #89b85a;
    background-image: url('../assets/ui/private.png');
    background-position: center;
    background-size: 16px 16px;
    background-repeat: no-repeat;
    border-radius: 50%;
    cursor: pointer;
}

.profile > .avatar {
    width: 192px;
    height: 192px;
    margin: 0 auto;
    border-width: 6px;
}

@media screen and (max-width: 960px) {
    .profile { width: auto; }
}

.diary {
    display: flex;
    background: #f6d4c3;
    border-radius: 8px;
    padding: 0.5em;
    gap: 0.8em;
    align-items: center;

    & > img {
        width: 40px;
        height: 40px;
    }
    & > .text {
        flex: 1;
        width: 200px;
        line-height: 1.4;
    }
}

.study {
    --background: var(--empty_color);

    display: flex;
    min-height: 6em;
    padding: 0.7em 1em;
    background: color-mix(in srgb, var(--background), transparent 60%);
    border-radius: 8px;
    gap: 3em;
    align-items: center;

    &.draft {
        --background: var(--draft_color);
        --button_color: var(--background);
    }
    &.done {
        --background: var(--done_color);
        --button_color: var(--background);
    }

    & > .title {
        display: flex;
        flex-direction: column;
        align-items: center;
        gap: 1em;
        font-weight: bold;

        & > img { width: 150px; }
    }
    & > .description {
        flex: 1;
        font-size: 0.9em;
        font-style: italic;
        min-width: 280px;
    }
    & > .progress {
        flex: 1;
        text-align: center;
        font-style: italic;
    }
}

@media screen and (max-width: 960px) {
    .study {
        padding-top: 1em;
        flex-wrap: wrap;
        justify-content: center;
        gap: 1em;

        & > .progress {
            margin-left: 1em;
            margin-right: 1em;
        }
        & > button {
            margin-right: 1em;
            margin-bottom: 0.5em;
        }
    }
}

.event {
    display: flex;
    background: #f6d4c3;
    border-radius: 8px;
    padding: 0.5em;
    gap: 0.8em;
    align-items: center;

    & > .text {
        flex: 1;
        width: 200px;
        padding-left: 0.5em;
        line-height: 1.4;
    }
    & > button {
        --button_color: #d9bf69;

        width: 3em;
        height: 3em;
        padding: 0 0.1em 0.2em 0.1em;
        border-radius: 6px;
    }
}

.calendars {
    display: flex;
    flex-wrap: wrap;
    gap: 24px;

    & img {
        width: 40px;
        height: 40px;
    }
}

.summary {
    display: flex;
    padding-right: 1em;
    background: var(--box_color);
    border-radius: 8px;
    gap: 1.5em;

    &.draft > .circle { --fill: var(--draft_color); }
    &.done > .circle { --fill: var(--done_color); }

    & > img {
        width: 240px;
        object-fit: cover;
        object-position: center top;
        background: #ecdbc3;
        border-top-left-radius: 8px;
        border-bottom-left-radius: 8px;
    }
    & > div {
        flex: 1;
        padding: 1em 0;
        overflow: hidden;
    }
    & > div > .title {
        margin-bottom: 1em;
        font-size: 1.2em;
        font-weight: bold;
        text-transform: uppercase;
        color: #364b9b;
    }
    & > .circle {
        margin: 0.5em 0;
        align-self: center;
    }
}

@media screen and (max-width: 960px) {
    .summary {
        & > img { display: none; }
        & > div { align-content: center; }
        & > div > :not(.header) { display: none; }
    }
}

.modules {
    display: flex;
    justify-content: space-evenly;
    flex-wrap: wrap;
    gap: 1em;
}
/* ... */

